syntax = "proto3";

package peace.services.db.peace;

service PeaceDbRPC { rpc SayHello(HelloRequest) returns (HelloReply); }

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }
